# mpigdb

./: .gitignore  Cargo.toml  LICENSE.md  README.md  spack.yaml
docs/: architecture.d2
play/: CMakeLists.txt  Makefile  benchmark.sh  comp.sh  crash.cc  heatdist.cc  run-bench.sh  test.cc
play/debug-scripts/: asan.mdb  mpigdb-script.sh  release.mdb  valgrind.mdb
src/: main.rs  mpi_gdbhelpers.py
