[package]
name = "mpigdb"
version = "0.5.2"
edition = "2021"
description = "A wrapper arround mpiexec, gdbserver, and gdb that makes debugging MPI programs eaiser"
authors = ["Robert Underwood <rr.underwood94@gmail.com>"]
repository = "https://github.com/robertu94/mpigdb"
license =  "BSD-2-Clause"
keywords = ["debugging", "parallel", "mpi"]
categories = ["command-line-utilities", "development-tools::debugging"]
exclude = ["docs/*"]

[dependencies]
anyhow = "1.0.66"
hostname = "0.3.1"
num_cpus = "1.14.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
which = "6.0.2"
